fix: "z-index styles incorrect scss selectors"

--- a/src/styles.css
+++ b/src/styles.css
@@ -141,37 +141,37 @@
   border-top-width: 0.125rem;
 }
 
-.ct-utils ._-z-50 {
+.ct-utils_-z-50 {
   z-index: -50;
 }
-.ct-utils ._-z-40 {
+.ct-utils_-z-40 {
   z-index: -40;
 }
-.ct-utils ._-z-30 {
+.ct-utils_-z-30 {
   z-index: -30;
 }
-.ct-utils ._-z-20 {
+.ct-utils_-z-20 {
   z-index: -20;
 }
-.ct-utils ._-z-10 {
+.ct-utils_-z-10 {
   z-index: -10;
 }
-.ct-utils ._z-0 {
+.ct-utils_z-0 {
   z-index: 0;
 }
-.ct-utils ._z-10 {
+.ct-utils_z-10 {
   z-index: 10;
 }
-.ct-utils ._z-20 {
+.ct-utils_z-20 {
   z-index: 20;
 }
-.ct-utils ._z-30 {
+.ct-utils_z-30 {
   z-index: 30;
 }
-.ct-utils ._z-40 {
+.ct-utils_z-40 {
   z-index: 40;
 }
-.ct-utils ._z-50 {
+.ct-utils_z-50 {
   z-index: 50;
 }
 .ct-utils_hidden {
